fix button alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,6 +320,7 @@ body {
   width: 0px;
   height: 0px;
   top: 57%;
+  left: 50%;
 }
 
 .content .masthead button {
